# fisor-builder

./: .gitignore  Dockerfile  LICENSE  README.md  deploy_fisor_builder.sh  fisor_cache.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: builder.py  cache_manager.py  cli.py  cohere_extractor.py  cohere_query_gen.py  confidence_validator.py  config.py  dataset_validator.py  iterative_search.py  logger.py  metrics.py  metrics_server.py  perplexity_client.py  schemas.py
