[project]
name = "fisor-builder"
version = "0.1.0"
description = "Iterative search and structured dataset builder using LLMs + search APIs."
authors = [{ name = "Enes Yesil/Fisor-Analytics" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
     "typer>=0.9.0",
    "pydantic>=1.10",
    "requests>=2.31.0",
    "cohere>=5.3.4",          
    "prometheus-client>=0.19",
    "python-dotenv>=1.0.0"
]

[project.scripts]
fisor-builder = "app.cli:app"
